src/App.css
@font-face {
  font-family: Ariq;
  src: url("./fonts/Ariq.otf") format("opentype");
}

@font-face {
  font-family: Ariq;
  font-weight: bold;
  src: url("./fonts/Ariq.otf") format("opentype");
}

.App {
  height: 100vh;
  width: 100vw;
  position: relative;
  background-color: white;
  transition: background-color ease-in-out 1s;
}

.dark.App {
  background-color: #061727;
}

.App .background,
.App .circle,
.App .stitches,
.App .dark-flowers {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.App .background {
  display: block;
  margin: 0;
  height: 90vh;
  width: 90vw;
  background: url("./images/stitch-flowers-light.png") no-repeat center;
  background-size: contain;
  transition: opacity ease-in-out 1s;
}

.dark.App .background {
  opacity: 0;
}

.App .dark-flowers {
  display: block;
  margin: 0;
  height: 90vh;
  width: 90vw;
  background: url("./images/stitch-flowers-dark.png") no-repeat center;
  background-size: contain;
}

.App .circle {
  display: block;
  height: 65vh;
  width: 65vh;
  background-color: #cddfeda2;
  border-radius: 50%;
}

.App .stitches {
  display: block;
  margin: 0 auto;
  background: url("./images/dashed-circle.png") no-repeat center;
  background-size: contain;
  height: 63vh;
  width: 63vh;
}

.App .content {
  font-family: "Courier New", Courier, monospace;
  color: #11416d;
  text-align: center;
  transition: color ease-in-out 1s;
}

.dark.App .content {
  color: #cddfed;
}

.App h1 {
  margin: 0;
  font-family: Ariq;
  font-weight: bold;
  font-size: 7rem;
  padding-top: 9rem;
}

.App h2 {
  font-size: 1rem;
  margin: 0;
}

.App h3 {
  font-size: 1.5rem;
  margin: 0;
  padding-top: 12vh;
}

.App p {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  padding-top: 1rem;
}

.App .text-input {
  border: none;
  background-color: #b5d4ec;
  margin-top: 1rem;
  height: 2rem;
  width: 11rem;
  border-radius: 20px;
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
  color: #11416d;
  padding: 0 0.8rem;
}

.App .text-input:focus {
  outline: none;
}

.App .button {
  border: none;
  height: 2rem;
  border-radius: 20px;
  margin: 0.5rem;
  padding: 0.5rem;
  background-color: #11416d;
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
  color: #cddfed;
}

.switch {
  position: relative;
  display: block;
  margin: 0 auto;
  top: 2rem;
  width: 4rem;
  height: 2rem;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #11416d;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  left: 0.25rem;
  bottom: 0.25rem;
  background-color: #b5d4ec;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #b5d4ec;
}

input:checked + .slider:before {
  transform: translateX(2rem);
  background-color: #11416d;
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* 320px — 480px: Mobile devices.
481px — 768px: iPads, Tablets.
769px — 1024px: Small screens, laptops.
1025px — 1200px: Desktops, large screens.
1201px and more — Extra large screens, TV. */

@media (max-width: 639px) {
  .App {
    max-height: -webkit-fill-available;
    overflow: hidden;
  }

  html {
    height: -webkit-fill-available;
  }

  .App .background {
    background-image: url("./images/stitch-flowers-light-verticle.png");
  }

  .App .dark-flowers {
    background-image: url("./images/stitch-flowers-dark-verticle.png");
  }

  .App .circle {
    height: 90vw;
    width: 90vw;
  }

  .App .stitches {
    height: 88vw;
    width: 88vw;
  }

  .App h1 {
    font-size: 3.5rem;
    padding-top: 3rem;
  }

  .App h2,
  .App h3 {
    font-size: 0.8rem;
  }

  .App p {
    font-size: 0.6rem;
    padding-top: 0.5rem;
  }

  .mode-switch {
    position: relative;
    top: 75vh;
    z-index: 99;
  }

  .App .text-input {
    margin-top: 0.5rem;
    height: 1rem;
    width: 8rem;
    padding: 0 0.3rem;
    font-size: 0.5rem;
  }

  .App .button {
    height: 1rem;
    margin: 0.5rem;
    padding: 0.2rem;
    font-size: 0.5rem;
  }
}

